--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./css/main.css" />
+
+    <!-- JS -->
+    <script defer src="./js/main.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -66,8 +69,9 @@
           <li><a href="javascript:void(0)">고객지원</a></li>
           <li class="search-starter"><a href="javascript:void(0)">검색</a></li>
           <li class="basket-starter">
-            <a href="javascript:void(0)">장바구니</a>
+            <a class="basket_link" href="javascript:void(0)">장바구니</a>
             <div class="basket">
+              <div class="arrow"></div>
               <div class="message">장바구니가 비어있습니다.</div>
               <ul>
                 <li><a href="javascript:void(0)">장바구니</a></li>
