--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -121,5 +121,18 @@
         </div>
       </div>
     </header>
+
+    <!-- Navigation -->
+    <nav>
+      <div class="inner">
+        <h1>iPad</h1>
+        <ul class="menu">
+          <li class="active"><a href="javascript:void(0)">개요</a></li>
+          <li><a href="javascript:void(0)">iPad를 선택하는 이유</a></li>
+          <li><a href="javascript:void(0)">제품사양</a></li>
+        </ul>
+        <button class="btn">구입하기</button>
+      </div>
+    </nav>
   </body>
 </html>
