--- a/index.html
+++ b/index.html
@@ -164,5 +164,47 @@
         </div>
       </div>
     </section>
+
+    <!-- power -->
+    <section class="power">
+      <div class="inner">
+        <div class="multiple-apps">
+          <h1 class="bgtext">거침없는 일 처리 성능</h1>
+          <div class="figures">
+            <figure>
+              <img
+                src="./assets/images/power_multiple_apps.png"
+                alt="keynote 마크업과 메세지가 함께 표시된 split view"
+              />
+              <figcaption class="bgtext">동시에 여러 앱 사용 가능</figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="arcade">
+          <div class="figures">
+            <figure>
+              <img
+                src="./assets/images/power_arcade.png"
+                alt="iPad에 woderbox 앱이 열려 있는 모습"
+              />
+              <figcaption class="bgtext">
+                신나게 즐기는 새로운 APPLE ARCADE 게임
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+
+        <div class="create">
+          <div class="figures">
+            <figure>
+              <img src="./assets/images/power_create.jpg" alt="그림 모습" />
+              <figcaption class="bgtext">
+                스케치하고, 그리고, 색칠하고
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
