--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
             </figure>
           </div>
         </div>
-        <div class="arcade">
+
+        <div class="arcade feature">
           <div class="figures">
             <figure>
               <img
@@ -192,9 +193,48 @@
               </figcaption>
             </figure>
           </div>
+          <div class="infos infos--center">
+            <div class="info">
+              <div class="icon icon--chip"></div>
+              <p>
+                A13 바이오닉 칩이 메세지 전송, 인터넷 서핑, 여러 앱에 동시에
+                사용하기 등 모든 작업에 더욱 탁월하게 해줍니다.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon icon--faster"></div>
+              <p>
+                chleo 20% 빨라진 GPU로 뛰어난 그래픽 성능을 선사합니다. 물입감
+                넘치는 게임 등 더 많은 것을 즐기는데 안성맞춤이죠.
+              </p>
+            </div>
+          </div>
         </div>
 
-        <div class="create">
+        <div class="create feature">
+          <div class="infos infos--end">
+            <div class="info">
+              <div class="icon icon--neural"></div>
+              <p>
+                더욱 강력해진 뉴트럴엔진이 아이패드 15의 라이브 텍스트와 같은
+                머신 러닝 기반 기능을 구현해줍니다.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon icon--apps"></div>
+              <p>
+                A13 바이오닉 칩은 어도비, 프로크레이티트와 같은 첨단 앱도 거뜬히
+                구동합니다.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon icon--battery"></div>
+              <p>
+                배터리를 갖춘 아이패드. 당신이 열공모드일때도 게임 삼매경에
+                빠져있을 때도 늘 함께할 준비가 되어 있습니다.
+              </p>
+            </div>
+          </div>
           <div class="figures">
             <figure>
               <img src="./assets/images/power_create.jpg" alt="그림 모습" />
