--- a/index.html
+++ b/index.html
@@ -246,5 +246,104 @@
         </div>
       </div>
     </section>
+
+    <!-- display -->
+    <section class="display">
+      <div class="inner">
+        <div class="notes">
+          <h1 class="bgtext">빛나는 아이디어에 걸맞는 디스플레이</h1>
+          <div class="figures">
+            <div class="figure">
+              <img src="./assets/images/display_notes.jpg" alt="" />
+              <figcaption class="bgtext">노트 필기는 goodnotes 5로</figcaption>
+            </div>
+          </div>
+        </div>
+        <div class="shareplay feature">
+          <div class="figures">
+            <figure>
+              <img src="./assets/images/display_shareplay.png" alt="" />
+              <figcaption class="bgtext">함께 보고 함께 즐기고</figcaption>
+            </figure>
+          </div>
+          <div class="infos infos--center">
+            <div class="info">
+              <div class="icon icon--display"></div>
+              <p>
+                놀랍도록 섬세한 디테일과 생생한 색상을 자랑하는 25.9cm 레티나
+                디스플레이를 갖춘 iPad. 영화를 감상할 때도, 프로젝트를 진행할
+                때도 또는 멋진 그림을 그릴 때도 더할 나위 없죠.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon icon--true-tone"></div>
+              <p>
+                True Tone이 주변의 조명에 맞춰 색온도를 조절해줍니다. 덕분에
+                어떤 조명에서도 눈이 편안한 화면을 경험할 수 있죠.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- camera -->
+    <section class="camera">
+      <div class="inner">
+        <div class="stage">
+          <h1 class="bgtext">촬영에서 편집 공유까지 한 기기에서.</h1>
+          <div class="info">
+            <div class="icon icon--center-stage"></div>
+            <p>
+              센터 스테이지 기술이 영상 통화시 당신이 언제나 화면 중앙에 있도록
+              자동으로 카메라를 조정해 줍니다. 덕분에 서로에게 더 집중할 수 있게
+              되죠. SNS에 올릴 재미난 동영상을 만들 때도 요긴하답니다.
+            </p>
+          </div>
+          <div class="figures">
+            <figure>
+              <img src="./assets/images/camera_hardware.png" alt="" />
+              <figcaption class="bgtext">
+                센터 스테이지 덕분에 영상 통화도 더 자연스럽게
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="edit feature">
+          <div class="infos infos--center">
+            <div class="info">
+              <div class="icon icon--front-camera"></div>
+              <p>
+                12MP 울트라 와이드 전면 카메라는 센터 스테이지 기술뿐만 아니라
+                엄청나게 향상된 이미지 화질을 자랑합니다. 덕분에 더욱 훌륭한
+                셀카와 단체 사진도 찍을 수 있죠.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon icon--back-camera"></div>
+              <p>
+                iPad 후면에 탑재된 8MP 와이드 카메라는 선명하고 또렷한 사진과
+                동영상을 담을 수 있습니다.
+              </p>
+            </div>
+            <div class="info">
+              <icon class="icon--scan"></icon>
+              <p>
+                다재다능한 후면 카메라로 문서를 스캔하고 몰입감 넘치는 AR 앱을
+                즐길 수도 있습니다.
+              </p>
+            </div>
+          </div>
+          <div class="figures">
+            <figure>
+              <img src="/assets/images/camera_edit.jpg" alt="" />
+              <figcaption class="bgtext">
+                사진도 동영상도 찍고 편집하고
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
